--- a/index.html
+++ b/index.html
@@ -16,20 +16,88 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     </head>
     <body>
-        <!-- Top Navbar (Logo + Search) -->
-        <div class="container py-2" id="top-nav">
-            <div class="navbar">
-                <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-auto">
+        <!-- 1st NavBar -->
+      <div class="container-fluid py-2 bg-light" id="one-nav">
+            <div class="container">
+                <div class="navbar">
+                    <div class="navbar-nav d-flex justify-content-center">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <button class="btn btn-primary" style="background-color:#083261">FREE CYBER SERVICES</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-primary" style="background-color:#0c7dae">CYBERSECURITY AWARENESS MONTH</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-primary" style="background-color:#3b6626">SECURE BY DESIGN</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-primary" style="background-color:#5f1a1a">SHIELDS UP</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-primary" style="background-color:#c71f1f">REPORT A CYBER ISSUE</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- 2nd Navbar (Logo + Search) -->
+        <div class="container-fluid">
+            <div class="container justify-content-center" id="two-nav">
+                <div class="navbar">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col left">
                             <img src="CISA-logo.png" height="140px">
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <h6>Search</h6>
                             <input class="search-bar" type="text">
                             <button class="btn btn-primary" type="button">
                             <i class="bi bi-search"></i>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 3rd Navbar -->
+        <div class="container-fluid" id="three-nav">
+            <div class="navbar">
+                <div class="container">
+                    <div class="row justify-content-start">
+                        <div class="col"><div class="dropdown dropdown-toggle">Topics </div></div>
+                        <div class="col"><div class="dropdown dropdown-toggle">Spotlight </div></div>
+                        <div class="col"><div class="dropdown dropdown-toggle">Resources & Tools </div></div>
+                        <div class="col"><div class="dropdown dropdown-toggle">News & Events </div></div>
+                        <div class="col"><div class="dropdown dropdown-toggle">Careers </div></div>
+                        <div class="col"><div class="dropdown dropdown-toggle">About </div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 4th Navbar -->
+        <div class="container-fluid" id="four-nav">
+            <div class="navbar">
+                <div class="container">
+                    <ul class="nav justify-content-center">
+                        <li>Home</li>
+                    </ul>
+                    <ul class="nav justify-content-end align-items-center">
+                        <li class="navbar-brand" style="font-size: small;"><strong>SHARE:</strong></li>
+                        <li class="navbar-brand"><i class="bi bi-facebook"></i></li>
+                        <li class="navbar-brand"><i class="bi bi-twitter-x"></i></li>
+                        <li class="navbar-brand"><i class="bi bi-linkedin"></i></li>
+                        <li class="navbar-brand"><i class="bi bi-envelope-fill"></i></li>
+                    </ul>   
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid grad-background" id="middle">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-4 text-left">
+                        <h1>October is Cybersecurity Awareness Month!</h1>
                     </div>
                 </div>
             </div>
