--- a/index.html
+++ b/index.html
@@ -93,11 +93,30 @@
                 </div>
             </div>
         </div>
+        <!-- Middle Section -->
         <div class="container-fluid grad-background" id="middle">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-4 text-left">
-                        <h1>October is Cybersecurity Awareness Month!</h1>
+                <div class="row d-flex align-items-center justify-content-start" style="min-height: 700px;">
+                    <div class="col-4 text-left align-self-start" style="padding-top: 125px; padding-right: 15px;">
+                        <div>
+                            <h2>October is Cybersecurity Awareness Month!</h2>
+                            <h5>CISA's Acting Director discusses our focus on government entities and small and medium businesses that are vital to protecting the systems and services that sustain us every day and make America a great place to live and do business.</h5>
+                        </div>
+                        <div>
+                            <button class="btn btn-primary">
+                                LEARN MORE!
+                                <i class="bi bi-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="ratio ratio-16x9">
+                            <iframe src="https://www.youtube.com/embed/6UzRjq12VQg"
+                                    title="CISA Acting Director Gottumukkala on Cybersecurity Awareness Month 2025"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen>
+                            </iframe>
+                        </div>
                     </div>
                 </div>
             </div>
