--- a/index.html
+++ b/index.html
@@ -121,7 +121,16 @@
                 </div>
             </div>
         </div>
-
+        <!-- Footer -->
+        <footer id="ft">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        
+                    </div>
+                </div>
+            </div>
+        </footer>
         <script src="" async defer></script>
     </body>
 </html>
