--- a/index.html
+++ b/index.html
@@ -125,8 +125,40 @@
         <footer id="ft">
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        
+                    <div class="col-10">
+                        <div class="d-flex align-items-center">
+                            <img src="CISA_Logo_circle.png" width="65px" style="margin-right: 20px;">
+                            <div>
+                                <div>CISA.gov</div>
+                                <div>An official website of the U.S. Department of Homeland Security</div>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-left: 0px;" id="underlined">
+                            <div class="col" style="margin-top: 40px;">
+                                <div class="spaced">About CISA</div>
+                                <div class="spaced">No FEAR Act</div>
+                                <div class="spaced">The White House</div>
+                            </div>
+                            <div class="col" style="margin-top: 40px;">
+                                <div class="spaced">Budget and Performance</div>
+                                <div class="spaced">Office of Inspector General</div>
+                                <div class="spaced">USA.gov</div>
+                            </div>
+                            <div class="col" style="margin-top: 40px;">
+                                <div class="spaced">DHS.gov</div>
+                                <div class="spaced">Privacy Policy</div>
+                                <div class="spaced">Website Feedback</div>
+                            </div>
+                            <div class="col" style="margin-top: 40px;">
+                                <div class="spaced">FOIA Requests</div>
+                                <div class="spaced">Subscribe</div>
+                            </div>
+                            <div class="col" style="margin-top: 40px;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2" style="margin-top: 40px;">
+                        <img src="NTA_Advisory.png" height="170px">
                     </div>
                 </div>
             </div>
